notebooks optimized to build docker

--- a/Individual_notebooks/Final_optimization.ipynb
+++ b/Individual_notebooks/Final_optimization.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,51 +19,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/user/leuven/351/vsc35102/.local/lib/python3.6/site-packages/distributed/node.py:155: UserWarning: Port 8787 is already in use.\n",
-      "Perhaps you already have a cluster running?\n",
-      "Hosting the HTTP server on port 42047 instead\n",
-      "  http_address[\"port\"], self.http_server.port\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<table style=\"border: 2px solid white;\">\n",
-       "<tr>\n",
-       "<td style=\"vertical-align: top; border: 0px solid white\">\n",
-       "<h3 style=\"text-align: left;\">Client</h3>\n",
-       "<ul style=\"text-align: left; list-style: none; margin: 0; padding: 0;\">\n",
-       "  <li><b>Scheduler: </b>tcp://127.0.0.1:32854</li>\n",
-       "  <li><b>Dashboard: </b><a href='http://127.0.0.1:42047/status' target='_blank'>http://127.0.0.1:42047/status</a></li>\n",
-       "</ul>\n",
-       "</td>\n",
-       "<td style=\"vertical-align: top; border: 0px solid white\">\n",
-       "<h3 style=\"text-align: left;\">Cluster</h3>\n",
-       "<ul style=\"text-align: left; list-style:none; margin: 0; padding: 0;\">\n",
-       "  <li><b>Workers: </b>4</li>\n",
-       "  <li><b>Cores: </b>36</li>\n",
-       "  <li><b>Memory: </b>21.47 GB</li>\n",
-       "</ul>\n",
-       "</td>\n",
-       "</tr>\n",
-       "</table>"
-      ],
-      "text/plain": [
-       "<Client: 'tcp://127.0.0.1:32854' processes=4 threads=36, memory=21.47 GB>"
-      ]
-     },
-     "execution_count": 29,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "#Create a local Dask cluster and connect it to the client. This is useful to follow the computation memory usage and execution time.  \n",
     "#Requires Dask JupyterLab extension to follow the Dashboard. For more information, please look at: https://docs.dask.org/en/stable/dashboard.html\n",
@@ -77,7 +35,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Set the working directory. \n",
+    "#Set the working directory to directory where you want to download your noise .csv files. \n",
     "os.chdir(\"/data/leuven/351/vsc35102/scratch/Full_Data_Set/\")"
    ]
   },
@@ -136,6 +94,8 @@
     "# Process .parquet files into Dask dataframe, subsample data into 10min intervals and return pandas dataframe. \n",
     "#Note that this chunk was not optimized in oop fashion to boost the performance.\n",
     "\n",
+    "#Optionally: There is output file already provided in the docker container. Please see the cell below to read in the file.\n",
+    "\n",
     "\n",
     "def process_data_by_month():\n",
     "    os.chdir(\"/data/leuven/351/vsc35102/scratch/Full_Data_Set/\")\n",
@@ -182,7 +142,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Read data to run docker container.\n",
+    "file ='/data/leuven/351/vsc35102/scratch/Full_Data_Set/table.csv'\n",
+    "table = pd.read_csv(file, sep = ',')\n",
+    "table['result_timestamp'] = pd.to_datetime(table['result_timestamp'],utc = True)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -209,96 +181,53 @@
        "      <th>#object_id</th>\n",
        "      <th>result_timestamp</th>\n",
        "      <th>laeq</th>\n",
-       "      <th>hour</th>\n",
-       "      <th>day_of_week</th>\n",
-       "      <th>month</th>\n",
-       "      <th>weekend</th>\n",
-       "      <th>holiday</th>\n",
-       "      <th>exam_period</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>255441</td>\n",
-       "      <td>2022-01-01 00:00:00+01:00</td>\n",
+       "      <td>2022-01-01 00:00:00+00:00</td>\n",
        "      <td>63.267554</td>\n",
-       "      <td>0</td>\n",
-       "      <td>5</td>\n",
-       "      <td>1</td>\n",
-       "      <td>True</td>\n",
-       "      <td>True</td>\n",
-       "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>255441</td>\n",
-       "      <td>2022-01-01 00:10:00+01:00</td>\n",
+       "      <td>2022-01-01 00:10:00+00:00</td>\n",
        "      <td>60.254000</td>\n",
-       "      <td>0</td>\n",
-       "      <td>5</td>\n",
-       "      <td>1</td>\n",
-       "      <td>True</td>\n",
-       "      <td>True</td>\n",
-       "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>255441</td>\n",
-       "      <td>2022-01-01 00:20:00+01:00</td>\n",
+       "      <td>2022-01-01 00:20:00+00:00</td>\n",
        "      <td>55.143907</td>\n",
-       "      <td>0</td>\n",
-       "      <td>5</td>\n",
-       "      <td>1</td>\n",
-       "      <td>True</td>\n",
-       "      <td>True</td>\n",
-       "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>255441</td>\n",
-       "      <td>2022-01-01 00:30:00+01:00</td>\n",
+       "      <td>2022-01-01 00:30:00+00:00</td>\n",
        "      <td>58.230167</td>\n",
-       "      <td>0</td>\n",
-       "      <td>5</td>\n",
-       "      <td>1</td>\n",
-       "      <td>True</td>\n",
-       "      <td>True</td>\n",
-       "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>255441</td>\n",
-       "      <td>2022-01-01 00:40:00+01:00</td>\n",
+       "      <td>2022-01-01 00:40:00+00:00</td>\n",
        "      <td>54.220466</td>\n",
-       "      <td>0</td>\n",
-       "      <td>5</td>\n",
-       "      <td>1</td>\n",
-       "      <td>True</td>\n",
-       "      <td>True</td>\n",
-       "      <td>False</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   #object_id          result_timestamp       laeq  hour  day_of_week  month  \\\n",
-       "0      255441 2022-01-01 00:00:00+01:00  63.267554     0            5      1   \n",
-       "1      255441 2022-01-01 00:10:00+01:00  60.254000     0            5      1   \n",
-       "2      255441 2022-01-01 00:20:00+01:00  55.143907     0            5      1   \n",
-       "3      255441 2022-01-01 00:30:00+01:00  58.230167     0            5      1   \n",
-       "4      255441 2022-01-01 00:40:00+01:00  54.220466     0            5      1   \n",
-       "\n",
-       "   weekend  holiday  exam_period  \n",
-       "0     True     True        False  \n",
-       "1     True     True        False  \n",
-       "2     True     True        False  \n",
-       "3     True     True        False  \n",
-       "4     True     True        False  "
+       "   #object_id          result_timestamp       laeq\n",
+       "0      255441 2022-01-01 00:00:00+00:00  63.267554\n",
+       "1      255441 2022-01-01 00:10:00+00:00  60.254000\n",
+       "2      255441 2022-01-01 00:20:00+00:00  55.143907\n",
+       "3      255441 2022-01-01 00:30:00+00:00  58.230167\n",
+       "4      255441 2022-01-01 00:40:00+00:00  54.220466"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -309,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -330,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -371,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -401,34 +330,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Localize the datetime object to the Belgian timezone\n",
     "# This keeps in mind the change from CET to CEST in spring and CEST to CET in autumn\n",
-    "time_features['result_timestamp'] = pd.to_datetime(time_features['result_timestamp']).dt.tz_localize('CET',ambiguous='NaT', nonexistent='NaT')\n",
+    "#time_features['result_timestamp'] = pd.to_datetime(time_features['result_timestamp']).dt.tz_localize('CET',ambiguous='NaT', nonexistent='NaT')\n",
     "time_features = time_features.dropna(subset=['result_timestamp'])\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/user/leuven/351/vsc35102/.local/lib/python3.6/site-packages/ipykernel_launcher.py:3: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  This is separate from the ipykernel package so we can avoid doing imports until\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Add the features relvant for the modeling part of the project:\n",
     "\n",
@@ -445,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -494,7 +410,7 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>255441</td>\n",
-       "      <td>2022-01-01 00:00:00+01:00</td>\n",
+       "      <td>2022-01-01 00:00:00+00:00</td>\n",
        "      <td>63.267554</td>\n",
        "      <td>0</td>\n",
        "      <td>5</td>\n",
@@ -502,7 +418,7 @@
        "      <td>True</td>\n",
        "      <td>True</td>\n",
        "      <td>False</td>\n",
-       "      <td>2554412022-01-01 00:00:00+01:00</td>\n",
+       "      <td>2554412022-01-01 00:00:00+00:00</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
        "      <td>True</td>\n",
@@ -516,7 +432,7 @@
        "    <tr>\n",
        "      <th>4464</th>\n",
        "      <td>255442</td>\n",
-       "      <td>2022-01-01 00:00:00+01:00</td>\n",
+       "      <td>2022-01-01 00:00:00+00:00</td>\n",
        "      <td>54.756500</td>\n",
        "      <td>0</td>\n",
        "      <td>5</td>\n",
@@ -524,7 +440,7 @@
        "      <td>True</td>\n",
        "      <td>True</td>\n",
        "      <td>False</td>\n",
-       "      <td>2554422022-01-01 00:00:00+01:00</td>\n",
+       "      <td>2554422022-01-01 00:00:00+00:00</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
@@ -538,7 +454,7 @@
        "    <tr>\n",
        "      <th>8928</th>\n",
        "      <td>255443</td>\n",
-       "      <td>2022-01-01 00:00:00+01:00</td>\n",
+       "      <td>2022-01-01 00:00:00+00:00</td>\n",
        "      <td>54.790667</td>\n",
        "      <td>0</td>\n",
        "      <td>5</td>\n",
@@ -546,7 +462,7 @@
        "      <td>True</td>\n",
        "      <td>True</td>\n",
        "      <td>False</td>\n",
-       "      <td>2554432022-01-01 00:00:00+01:00</td>\n",
+       "      <td>2554432022-01-01 00:00:00+00:00</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
@@ -560,7 +476,7 @@
        "    <tr>\n",
        "      <th>13392</th>\n",
        "      <td>255444</td>\n",
-       "      <td>2022-01-01 00:00:00+01:00</td>\n",
+       "      <td>2022-01-01 00:00:00+00:00</td>\n",
        "      <td>51.906667</td>\n",
        "      <td>0</td>\n",
        "      <td>5</td>\n",
@@ -568,7 +484,7 @@
        "      <td>True</td>\n",
        "      <td>True</td>\n",
        "      <td>False</td>\n",
-       "      <td>2554442022-01-01 00:00:00+01:00</td>\n",
+       "      <td>2554442022-01-01 00:00:00+00:00</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
@@ -582,7 +498,7 @@
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>255441</td>\n",
-       "      <td>2022-01-01 00:10:00+01:00</td>\n",
+       "      <td>2022-01-01 00:10:00+00:00</td>\n",
        "      <td>60.254000</td>\n",
        "      <td>0</td>\n",
        "      <td>5</td>\n",
@@ -590,7 +506,7 @@
        "      <td>True</td>\n",
        "      <td>True</td>\n",
        "      <td>False</td>\n",
-       "      <td>2554412022-01-01 00:10:00+01:00</td>\n",
+       "      <td>2554412022-01-01 00:10:00+00:00</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
        "      <td>True</td>\n",
@@ -607,18 +523,18 @@
       ],
       "text/plain": [
        "       #object_id          result_timestamp       laeq  hour  day_of_week  \\\n",
-       "0          255441 2022-01-01 00:00:00+01:00  63.267554     0            5   \n",
-       "4464       255442 2022-01-01 00:00:00+01:00  54.756500     0            5   \n",
-       "8928       255443 2022-01-01 00:00:00+01:00  54.790667     0            5   \n",
-       "13392      255444 2022-01-01 00:00:00+01:00  51.906667     0            5   \n",
-       "1          255441 2022-01-01 00:10:00+01:00  60.254000     0            5   \n",
+       "0          255441 2022-01-01 00:00:00+00:00  63.267554     0            5   \n",
+       "4464       255442 2022-01-01 00:00:00+00:00  54.756500     0            5   \n",
+       "8928       255443 2022-01-01 00:00:00+00:00  54.790667     0            5   \n",
+       "13392      255444 2022-01-01 00:00:00+00:00  51.906667     0            5   \n",
+       "1          255441 2022-01-01 00:10:00+00:00  60.254000     0            5   \n",
        "\n",
        "       month  weekend  holiday  exam_period                              key  \\\n",
-       "0          1     True     True        False  2554412022-01-01 00:00:00+01:00   \n",
-       "4464       1     True     True        False  2554422022-01-01 00:00:00+01:00   \n",
-       "8928       1     True     True        False  2554432022-01-01 00:00:00+01:00   \n",
-       "13392      1     True     True        False  2554442022-01-01 00:00:00+01:00   \n",
-       "1          1     True     True        False  2554412022-01-01 00:10:00+01:00   \n",
+       "0          1     True     True        False  2554412022-01-01 00:00:00+00:00   \n",
+       "4464       1     True     True        False  2554422022-01-01 00:00:00+00:00   \n",
+       "8928       1     True     True        False  2554432022-01-01 00:00:00+00:00   \n",
+       "13392      1     True     True        False  2554442022-01-01 00:00:00+00:00   \n",
+       "1          1     True     True        False  2554412022-01-01 00:10:00+00:00   \n",
        "\n",
        "       255439  255440  255441  255442  255443  255444  255445  280324  303910  \n",
        "0       False   False    True   False   False   False   False   False   False  \n",
@@ -628,7 +544,7 @@
        "1       False   False    True   False   False   False   False   False   False  "
       ]
      },
-     "execution_count": 15,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -649,11 +565,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Read in the weather data \n",
+    "#Read in the weather data. Please note this is the cell that reads multiple .csv files for weather data.\n",
+    "#To run the Docker container, this data has been provided already in a dataframe. See the cell below.\n",
     "\n",
     "def read_multiple_csv(folder_path, columns_to_select):\n",
     "    dfs = [] #List to store individual DataFrames\n",
@@ -676,6 +593,17 @@
   {
    "cell_type": "code",
    "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Read data to run docker container.\n",
+    "file ='/data/leuven/351/vsc35102/scratch/Full_Data_Set/weather.csv'\n",
+    "weather = pd.read_csv(file, sep = ',')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -812,12 +740,12 @@
        "</div>"
       ],
       "text/plain": [
-       "              DATEUTC      ID  LC_HUMIDITY  LC_DWPTEMP  LC_n  LC_RAD  \\\n",
-       "0 2022-01-01 00:10:00  LC-002         92.0       11.78  38.0     0.0   \n",
-       "1 2022-01-01 00:20:00  LC-002         92.0       11.73  37.0     0.0   \n",
-       "2 2022-01-01 00:30:00  LC-002         92.0       11.73  38.0     0.0   \n",
-       "3 2022-01-01 00:40:00  LC-002         92.0       11.72  37.0     0.0   \n",
-       "4 2022-01-01 00:50:00  LC-002         92.0       11.72  38.0     0.0   \n",
+       "               DATEUTC      ID  LC_HUMIDITY  LC_DWPTEMP  LC_n  LC_RAD  \\\n",
+       "0  2022-01-01 00:10:00  LC-002         92.0       11.78  38.0     0.0   \n",
+       "1  2022-01-01 00:20:00  LC-002         92.0       11.73  37.0     0.0   \n",
+       "2  2022-01-01 00:30:00  LC-002         92.0       11.73  38.0     0.0   \n",
+       "3  2022-01-01 00:40:00  LC-002         92.0       11.72  37.0     0.0   \n",
+       "4  2022-01-01 00:50:00  LC-002         92.0       11.72  38.0     0.0   \n",
        "\n",
        "   LC_RAININ  LC_DAILYRAIN  LC_WINDDIR  LC_WINDSPEED  LC_RAD60  LC_TEMP_QCL0  \\\n",
        "0        0.0           0.0      -169.0          0.43       0.0         13.11   \n",
@@ -834,7 +762,7 @@
        "4         13.00       12.9415     12.952268  "
       ]
      },
-     "execution_count": 18,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -865,7 +793,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1024,7 +952,7 @@
        "972004         13.28         13.28        13.223      13.09212  "
       ]
      },
-     "execution_count": 20,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
