--- a/Individual_notebooks/MDA_models_notebook.ipynb
+++ b/Individual_notebooks/MDA_models_notebook.ipynb
@@ -44,8 +44,7 @@
     "from sklearn.model_selection import GridSearchCV\n",
     "import matplotlib.pyplot as plt\n",
     "from sklearn.metrics import mean_absolute_error, mean_squared_error\n",
-    "from sklearn.model_selection import KFold\n",
-    "import os\n"
+    "from sklearn.model_selection import KFold"
    ]
   },
   {
@@ -161,14 +160,15 @@
     "                  'LC_DAILYRAIN', 'LC_WINDDIR', 'LC_WINDSPEED', 'LC_RAD60', 'LC_TEMP_QCL0'], axis=1)\n",
     "    df['key'] = df['object_id'].astype(str) + df['result_timestamp'].astype(str)\n",
     "\n",
-    "    # Merge df with df_noisedelay and df_weatherdelay on 'key'\n",
+    "\n",
+    "     # Merge df with df_noisedelay and df_weatherdelay on 'key'\n",
     "    delayed_df = pd.merge(df, df_noisedelay, on='key').merge(df_weatherdelay, on='key')\n",
     "\n",
     "    # Delete observations with missing values\n",
     "    delayed_df = delayed_df.dropna()\n",
     "\n",
     "    # Create feature matrix X and target vector y\n",
-    "    X = delayed_df.drop(['result_timestamp', 'key','laeq', 'object_id','255442', '255443', '255444', '255445',\n",
+    "    X = delayed_df.drop(['result_timestamp', 'key','laeq', 'object_id','ID','255442', '255443', '255444', '255445',\n",
     "       '280324', '303910'], axis=1)\n",
     "    y = delayed_df['laeq']\n",
     "\n",
@@ -197,7 +197,7 @@
     }
    ],
    "source": [
-    "# Check 6 hour delay.\n",
+    "#check 6 hour delay\n",
     "plt.plot(delayed_df['hour'][30:100], y[30:100], label = 'Noise')\n",
     "plt.plot(delayed_df['hour'][30:100], X['laeq_delayed'][30:100], color='g', label='6 hour delayed noise')\n",
     "plt.xlabel('Time (hours)')\n",
@@ -241,7 +241,7 @@
     "        include_bias=True,\n",
     "    )\n",
     "\n",
-    "# Creating spline transformers.\n",
+    "#creating spline transformers\n",
     "cyclic_spline_transformer = ColumnTransformer(\n",
     "    transformers=[\n",
     "        (\"cyclic_month\", periodic_spline_transformer(12, n_splines=6), [\"month\"]),\n",
@@ -251,7 +251,7 @@
     "    #remainder=MinMaxScaler(),\n",
     ")\n",
     "\n",
-    "# Creating interactions\n",
+    "#creating interactions\n",
     "hour_holiday_interaction = make_pipeline(\n",
     "    ColumnTransformer(\n",
     "        [\n",
@@ -282,7 +282,7 @@
     "    PolynomialFeatures(degree=2, interaction_only=True, include_bias=False),\n",
     ")\n",
     "\n",
-    "# Creating a standardization function for the numeric variables\n",
+    "#creating a standardization function for the numeric variables\n",
     "scaling_features=['LC_HUMIDITY','LC_TEMP_QCL0','LC_RAD60','LC_WINDSPEED','LC_WINDDIR','LC_DAILYRAIN','LC_RAININ','LC_RAD','LC_n','LC_DWPTEMP']\n",
     "standardize=ColumnTransformer(\n",
     "    [\n",
@@ -365,14 +365,14 @@
     "        'Gradient Boosting': {\n",
     "            #n_estimators is not further increased, to limit runtime\n",
     "            'model__learning_rate': [0.29,0.30],\n",
-    "            'model__max_leaf_nodes': [100,150]\n",
+    "            'model__max_leaf_nodes': [100,200]\n",
     "        },\n",
     "\n",
     "        'XGBoost': {\n",
     "            #n_estimators is not further increased, to limit runtime\n",
     "            'model__learning_rate': [0.09,0.10],\n",
-    "            'model__n_estimators': [90,100],\n",
-    "            'model__max_depth': [6,7]\n",
+    "            'model__n_estimators': [100,200],\n",
+    "            'model__max_depth': [10,11]\n",
     "        }\n",
     "    }\n",
     "    best_pipeline = None\n",
@@ -494,7 +494,7 @@
    ],
    "source": [
     "final_pipeline= Pipeline(\n",
-    "    [('model', XGBRegressor(random_state=1234,max_depth=7,learning_rate=0.1,n_estimators=100))]\n",
+    "    [('model', XGBRegressor(random_state=1234,max_depth=11,learning_rate=0.1,n_estimators=200))]\n",
     "    )\n",
     "\n",
     "#plot shapley values for final model pipeline\n",
@@ -742,6 +742,7 @@
    ],
    "source": [
     "# Visualization of model predictions, trained on full data.\n",
+    "\n",
     "\n",
     "last_hours = slice(-1000, None)\n",
     "fig, ax = plt.subplots(figsize=(12, 4))\n",
