--- a/Individual_notebooks/MDA_models_notebook.ipynb
+++ b/Individual_notebooks/MDA_models_notebook.ipynb
@@ -168,7 +168,7 @@
     "    delayed_df = delayed_df.dropna()\n",
     "\n",
     "    # Create feature matrix X and target vector y\n",
-    "    X = delayed_df.drop(['result_timestamp', 'key','laeq', 'object_id','ID','255442', '255443', '255444', '255445',\n",
+    "    X = delayed_df.drop(['result_timestamp', 'key','laeq', 'object_id','255442', '255443', '255444', '255445',\n",
     "       '280324', '303910'], axis=1)\n",
     "    y = delayed_df['laeq']\n",
     "\n",
@@ -228,7 +228,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Preparing transformations and features for the Ridge regression.\n",
+    "#preparing transformations and features for the Ridge regression\n",
     "def periodic_spline_transformer(period, n_splines=None, degree=3):\n",
     "    if n_splines is None:\n",
     "        n_splines = period\n",
@@ -379,7 +379,7 @@
     "    best_params = None\n",
     "    best_score = -float('inf')\n",
     "\n",
-    "    # Perform grid search using cross-validation for each pipeline\n",
+    "  # Perform grid search using cross-validation for each pipeline\n",
     "    for pipeline_name, pipeline in pipelines:\n",
     "        param_grid = param_grids[pipeline_name]\n",
     "        scorer = 'neg_mean_squared_error'\n",
